Updated docs to 3d8da3a

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Polyglot Workflows 101",
-  "name": "Polyglot Books - Workflows 101",
+  "short_name": "Python 101",
+  "name": "Polyglot Books - Python 101",
   "background_color": "#ffffff",
   "theme_color": "#0000ff",
   "display": "standalone",
